--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,6 @@
 # Mostly copy-paste from https://github.com/kiddivouchers/php-timecop/blob/master/.github/workflows/build.yml
 name: Build fakerandom
 on:
-  push:
-    branches:
-      - main
-  pull_request:
   release:
     types: [created]
 jobs:
@@ -69,9 +65,12 @@ jobs:
           done
           cd output
           sha256sum *.so > SHA256SUM
-      - name: Save artifact
-        uses: actions/upload-artifact@v2
+      - name: Upload release assets
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          name: fakerandom
-          path: output/*
-          if-no-files-found: error
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_name: fakerandom
+          asset_path: output/*
+          asset_content_type: application/octet-stream
