--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,11 +2,9 @@
 name: Build fakerandom
 on:
   push:
-    branches:
-      - main
-  pull_request:
-  release:
-    types: [created]
+    tags:
+      - 'v*'
+
 jobs:
   build:
     name: PHP ${{ matrix.php-version }} (ZTS ${{ matrix.php-zts }})
@@ -69,9 +67,20 @@ jobs:
           done
           cd output
           sha256sum *.so > SHA256SUM
-      - name: Save artifact
-        uses: actions/upload-artifact@v2
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          name: fakerandom
-          path: output/*
-          if-no-files-found: error
+          tag_name: ${{ github.ref }}
+          release_name: ${{ github.ref }}
+          draft: true
+          prerelease: false
+      - name: Upload release assets
+        uses: dwenegar/upload-release-assets@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          release_id: ${{ steps.create_release.outputs.id }}
+          assets_path: output
