--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -72,12 +72,11 @@ jobs:
           sha256sum *.so > SHA256SUM
       - name: Create Release
         id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ github.ref }}
-          release_name: ${{ github.ref }}
+          name: ${{ github.ref }}
+          token: ${{ secrets.GITHUB_TOKEN }}
           draft: true
           prerelease: false
       - name: Upload release assets
